      scheduler requests. This patch only affects AMD64. (related to: #366741)
  * Explain in boinc-client's README.Debian how to modify the BOINC core
    client so that it downloads 32bit applications on AMD64. The
    01_amd64-disable-platform-reset.dpatch patch is mandatory for this
    procedure to work correctly. (also related to: #366741, LP#51948)

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Sat, 26 Aug 2006 16:33:00 +0200

boinc (5.4.10-2) unstable; urgency=medium

  [ Frank S. Thomas ]
  * Removed -ffast-math from the client's optimization flags because it causes
    a floating point exception on Alpha when the client is started.
    (closes: #379137)
  * Added conffile /etc/boinc-client/log_flags.xml which can be used to turn
    on/off logging and debugging messages. For a detailed list of messages
    that can be turned on/off, see http://boinc.berkeley.edu/client_msgs.php
    Note that this file was renamed to cc_config.xml in BOINC (>= 5.5.2).
  * Applied patches from Peter Bailis <pbailis@gmail.com> for the boinc_cmd
    manual page. Thanks again Peter!
  * debian/control:
    - Added boinc-app-seti to boinc-client's Suggests field.

 -- Frank S. Thomas <frank@thomas-alfeld.de>  Tue, 25 Jul 2006 12:55:10 +0200

boinc (5.4.10-1) unstable; urgency=low

  [ Frank S. Thomas ]
  * New upstream release.
    - Display Account Manager names correctly in BOINC Manager. This fixes
      Ubuntu bug #48246.
  * debian/control: 
    - Really bumped the Standards-Version to 3.7.2.
  * Added the boinc_gl.h header to the boinc-dev package. This file is needed
    to compile SETI@home's graphics component.
  * Added a hint to use "update-alternatives --set x-www-browser [...]" to
    manually set the x-www-browser alternative to boinc-manager's
    README.Debian. See Ubuntu bug #48766 for more details.
  * Use /usr/bin/python as interpreter for update-boinc-applinks instead of
    /usr/bin/python2.4 and make boinc-client depend on "python (>= 2.3)" to