@@ -1,0 +1,2 @@
+debian/extra/move-boinc-dir.sh
+debian/extra/use-32bit-on-amd64.sh
