@@ -23,8 +23,10 @@ boinc (5.4.11-1) unstable; urgency=low
     client so that it downloads 32bit applications on AMD64. The
     01_amd64-disable-platform-reset.dpatch patch is mandatory for this
     procedure to work correctly. (also related to: #366741, LP#51948)
+  * Added two helper scripts (move-boinc-dir.sh and use-32bit-on-amd64.sh)
+    as examples in the boinc-client package.
 
- -- Frank S. Thomas <frank@thomas-alfeld.de>  Sat, 26 Aug 2006 16:33:00 +0200
+ -- Frank S. Thomas <frank@thomas-alfeld.de>  Sun, 27 Aug 2006 14:50:00 +0200
 
 boinc (5.4.10-2) unstable; urgency=medium
 
